Updated French translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-19  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Stephane Raimbault <raimbault.stephane@free.fr>.
+
 2003-07-17  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation.
