Added "sr@Latn" to ALL_LINGUAS. Renamed "sr.po" to "sr@Latn.po", added
2003-07-20  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr@Latn" to ALL_LINGUAS.
	* po/sr.po, po/sr@Latn.po: Renamed "sr.po" to "sr@Latn.po", added
	"sr.po", and updated translations by Serbian team (Prevod.org).

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-20  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Renamed "sr.po" to "sr@Latn.po", added
+	"sr.po", and updated translations by Serbian team (Prevod.org).
+
 2003-07-19  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
