--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-20  Danilo Šegan  <dsegan@gmx.net>
+
+	* configure.in: Added "sr@Latn" to ALL_LINGUAS.
+
 2003-06-29  Richard Hult  <richard@imendio.com>
 
 	* src/*.c: Include gnome-i18n.h instead of drw-intl.h. Use macro
