--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -3,14 +3,14 @@
 # 
 # This file is distributed under the same license as the drwright package.
 # 
-# Maintainer: Данило Шеган <dsegan@gmx.net>
+# Maintainer: Danilo Šegan <dsegan@gmx.net>
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: DrWright\n"
 "POT-Creation-Date: 2003-06-24 00:30+0200\n"
 "PO-Revision-Date: 2003-07-20 15:57+0200\n"
-"Last-Translator: Данило Шеган <danilo@prevod.org>\n"
+"Last-Translator: Danilo Šegan <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,146 +26,146 @@ msgstr "*"
 
 #: data/glade/drw-preferences.glade.h:3
 msgid "<b>Break</b>"
-msgstr "<b>Одмор</b>"
+msgstr "<b>Odmor</b>"
 
 #: data/glade/drw-preferences.glade.h:4
 msgid "<b>Work</b>"
-msgstr "<b>Рад</b>"
+msgstr "<b>Rad</b>"
 
 #: data/glade/drw-preferences.glade.h:5
 msgid "Check if breaks are allowed to be postponed"
-msgstr "Укључите ако је дозвољено одлагање одмора"
+msgstr "Uključite ako je dozvoljeno odlaganje odmora"
 
 #: data/glade/drw-preferences.glade.h:6
 msgid "DrWright Preferences"
-msgstr "Поставке ДрМилеве"
+msgstr "Postavke DrMileve"
 
 #: data/glade/drw-preferences.glade.h:7
 msgid "Duration of the break when typing is disallowed"
-msgstr "Трајање одмора у току којег је куцање забрањено"
+msgstr "Trajanje odmora u toku kojeg je kucanje zabranjeno"
 
 #: data/glade/drw-preferences.glade.h:8
 msgid "Duration of warning before starting a break"
-msgstr "Трајање упозорења пре започињања одмора"
+msgstr "Trajanje upozorenja pre započinjanja odmora"
 
 #: data/glade/drw-preferences.glade.h:9
 msgid "Duration of work before forcing a break"
-msgstr "Трајање рада пре одласка на одмор"
+msgstr "Trajanje rada pre odlaska na odmor"
 
 #: data/glade/drw-preferences.glade.h:10
 msgid "Optional phrase to use for postponing a break"
-msgstr "Израз по избору који се користи за одлагање одмора"
+msgstr "Izraz po izboru koji se koristi za odlaganje odmora"
 
 #: data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
-msgstr "_Допусти одлагање одмора"
+msgstr "_Dopusti odlaganje odmora"
 
 #: data/glade/drw-preferences.glade.h:12
 msgid "_Break interval lasts"
-msgstr "_Одмор траје"
+msgstr "_Odmor traje"
 
 #: data/glade/drw-preferences.glade.h:13
 msgid "_Warning time is"
-msgstr "Време _упозорења је"
+msgstr "Vreme _upozorenja je"
 
 #: data/glade/drw-preferences.glade.h:14
 msgid "_Work interval lasts"
-msgstr "_Рад траје"
+msgstr "_Rad traje"
 
 #: data/glade/drw-preferences.glade.h:15
 msgid "minutes"
-msgstr "минута"
+msgstr "minuta"
 
 #: src/main.c:128
 msgid "DrWright is already running."
-msgstr "ДрМилева је већ покренута."
+msgstr "DrMileva je već pokrenuta."
 
 #: src/main.c:141
 msgid ""
 "DrWright uses the notification area to display information. You don't seem "
 "to have a notification area on your panel. You can add it by right-clicking "
 "on your panel and choose 'Add to panel -> Utilities -> Notification area'."
-msgstr "ДрМилева користи обавештајну зону за приказ обавештења. Чини се да на вашем панелу нема обавештајне зоне. Можете је додати десним-кликом на панел и избором „Додај на панел > Алати > Обавештајна зона“."
+msgstr "DrMileva koristi obaveštajnu zonu za prikaz obaveštenja. Čini se da na vašem panelu nema obaveštajne zone. Možete je dodati desnim-klikom na panel i izborom „Dodaj na panel > Alati > Obaveštajna zona“."
 
 #: src/drwright.c:134
 msgid "/_Enabled"
-msgstr "/_Укључено"
+msgstr "/_Uključeno"
 
 #: src/drwright.c:135
 msgid "/_Take a Break"
-msgstr "/_Идите на одмор"
+msgstr "/_Idite na odmor"
 
 #: src/drwright.c:137
 msgid "/_Preferences"
-msgstr "/_Поставке"
+msgstr "/_Postavke"
 
 #: src/drwright.c:138
 msgid "/_About"
-msgstr "/_О..."
+msgstr "/_O..."
 
 #: src/drwright.c:140
 msgid "/_Remove Icon"
-msgstr "/У_клони икону"
+msgstr "/U_kloni ikonu"
 
 #: src/drwright.c:443
 msgid "Disabled"
-msgstr "Искључено"
+msgstr "Isključeno"
 
 # bug: plural-forms
 #: src/drwright.c:461
 #, c-format
 msgid "%d minutes until the next break"
-msgstr "%d минута до следећег одмора"
+msgstr "%d minuta do sledećeg odmora"
 
 # bug: plural-forms
 #: src/drwright.c:464
 msgid "One minute until the next break"
-msgstr "Један минут до следећег одмора"
+msgstr "Jedan minut do sledećeg odmora"
 
 #: src/drwright.c:466
 msgid "Less than one minute until the next break"
-msgstr "Мање од једног минута до следећег одмора"
+msgstr "Manje od jednog minuta do sledećeg odmora"
 
 #: src/drwright.c:583
 msgid "Quit DrWright?"
-msgstr "Затворите ДрМилеву?"
+msgstr "Zatvorite DrMilevu?"
 
 #: src/drwright.c:584
 msgid "Don't forget to take regular breaks."
-msgstr "Не заборавите да узимате редовне одморе."
+msgstr "Ne zaboravite da uzimate redovne odmore."
 
 #: src/drwright.c:595
 msgid "Don't Quit"
-msgstr "Не затварај"
+msgstr "Ne zatvaraj"
 
 #: src/drwright.c:599
 msgid "Quit"
-msgstr "Затвори"
+msgstr "Zatvori"
 
 #: src/drwright.c:645
 msgid "About DrWright"
-msgstr "О ДрМилеви"
+msgstr "O DrMilevi"
 
 #: src/drwright.c:669
 msgid "A computer break reminder."
-msgstr "Подсетник за одмор при раду."
+msgstr "Podsetnik za odmor pri radu."
 
 #: src/drwright.c:670
 msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
-msgstr "Написао Ричард Хулт &lt;rhult@codefactory.se&gt;"
+msgstr "Napisao Ričard Hult &lt;rhult@codefactory.se&gt;"
 
 #: src/drwright.c:671
 msgid "Eye candy added by Anders Carlsson"
-msgstr "Улепшао Андерс Карлссон"
+msgstr "Ulepšao Anders Karlsson"
 
 #: src/drwright.c:830
 msgid "Break reminder"
-msgstr "Подсетник за одмор"
+msgstr "Podsetnik za odmor"
 
 #: src/drw-break-window.c:258
 msgid "Postpone break"
-msgstr "Одложи одмор"
+msgstr "Odloži odmor"
 
 #: src/drw-break-window.c:296
 msgid "Take a break!"
-msgstr "Одморите мало!"
+msgstr "Odmorite malo!"
