--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-22  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
+
+        * es.po: Updated Spanish translation by
+                 Francisco Javier F. Serrador <serrador@arrakis.es>.
+
 2003-07-20  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Renamed "sr.po" to "sr@Latn.po", added
