Updated Portuguese translation.
2003-07-27  Duarte Loreto <happyguy_pt@hotmail.com>

        * pt.po: Updated Portuguese translation.

--- a/po/pt.po
+++ b/po/pt.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 2.4\n"
-"POT-Creation-Date: 2003-06-24 00:30+0200\n"
-"PO-Revision-Date: 2003-05-24 19:20+0000\n"
+"POT-Creation-Date: 2003-07-27 15:01+0100\n"
+"PO-Revision-Date: 2003-07-27 15:05+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -16,73 +16,59 @@ msgstr ""
 
 #: data/glade/drw-preferences.glade.h:1
 msgid "    "
-msgstr ""
+msgstr "    "
 
 #: data/glade/drw-preferences.glade.h:2
 msgid "*"
 msgstr "*"
 
 #: data/glade/drw-preferences.glade.h:3
-#, fuzzy
 msgid "<b>Break</b>"
-msgstr "<b>Intervalo _interrupção:</b>"
+msgstr "<b>Intervalo</b>"
 
 #: data/glade/drw-preferences.glade.h:4
-#, fuzzy
 msgid "<b>Work</b>"
-msgstr "<b>Intrevalo _trabalho:</b>"
+msgstr "<b>Trabalho</b>"
 
 #: data/glade/drw-preferences.glade.h:5
 msgid "Check if breaks are allowed to be postponed"
-msgstr ""
+msgstr "Verificar se é permitido adiar intervalos"
 
 #: data/glade/drw-preferences.glade.h:6
 msgid "DrWright Preferences"
 msgstr "Preferências DrWright"
 
 #: data/glade/drw-preferences.glade.h:7
-#, fuzzy
 msgid "Duration of the break when typing is disallowed"
-msgstr ""
-"<span size=\"small\">Duração da interrupção durante a qual escrever não é "
-"permitido.</span>"
+msgstr "Duração do intervalo durante o qual não é permitido escrever"
 
 #: data/glade/drw-preferences.glade.h:8
-#, fuzzy
 msgid "Duration of warning before starting a break"
-msgstr ""
-"<span size=\"small\">Duração do aviso antes de iniciar uma interrupção.\n"
-"</span>"
+msgstr "Duração do aviso antes de iniciar um intervalo"
 
 #: data/glade/drw-preferences.glade.h:9
-#, fuzzy
 msgid "Duration of work before forcing a break"
-msgstr ""
-"<span size=\"small\">Duração do trabalho antes de forçar uma interrupção.\n"
-"</span>"
+msgstr "Duração do trabalho antes de forçar um intervalo"
 
 #: data/glade/drw-preferences.glade.h:10
 msgid "Optional phrase to use for postponing a break"
-msgstr ""
+msgstr "Frase opcional a utilizar para adiar um intervalo"
 
 #: data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
-msgstr ""
+msgstr "Permitir _adiar intervalos"
 
 #: data/glade/drw-preferences.glade.h:12
-#, fuzzy
 msgid "_Break interval lasts"
-msgstr "<b>Intervalo _interrupção:</b>"
+msgstr "_Intervalo dura"
 
 #: data/glade/drw-preferences.glade.h:13
-#, fuzzy
 msgid "_Warning time is"
-msgstr "<b>Hora _aviso:</b>"
+msgstr "Tempo de _aviso é"
 
 #: data/glade/drw-preferences.glade.h:14
-#, fuzzy
 msgid "_Work interval lasts"
-msgstr "<b>Intrevalo _trabalho:</b>"
+msgstr "Intervalo de _trabalho dura"
 
 #: data/glade/drw-preferences.glade.h:15
 msgid "minutes"
@@ -108,9 +94,8 @@ msgid "/_Enabled"
 msgstr "/_Activo"
 
 #: src/drwright.c:135
-#, fuzzy
 msgid "/_Take a Break"
-msgstr "Faça um intrevalo!"
+msgstr "/_Fazer um Intervalo"
 
 #: src/drwright.c:137
 msgid "/_Preferences"
@@ -131,61 +116,59 @@ msgstr "Inactivo"
 #: src/drwright.c:461
 #, c-format
 msgid "%d minutes until the next break"
-msgstr "%d minutos até ao próximo intrevalo"
+msgstr "%d minutos até ao próximo intervalo"
 
 #: src/drwright.c:464
 msgid "One minute until the next break"
-msgstr "Um minuto até ao próximo intrevalo"
+msgstr "Um minuto até ao próximo intervalo"
 
 #: src/drwright.c:466
-#, fuzzy
 msgid "Less than one minute until the next break"
-msgstr "Um minuto até ao próximo intrevalo"
+msgstr "Menos de um minuto até ao próximo intervalo"
 
-#: src/drwright.c:583
+#: src/drwright.c:577
 msgid "Quit DrWright?"
 msgstr "Terminar DrWright?"
 
-#: src/drwright.c:584
+#: src/drwright.c:578
 msgid "Don't forget to take regular breaks."
-msgstr "Não se esqueça de fazer intrevalos regulares."
+msgstr "Não se esqueça de fazer intervalos regulares."
 
-#: src/drwright.c:595
+#: src/drwright.c:589
 msgid "Don't Quit"
-msgstr ""
+msgstr "Não Sair"
 
-#: src/drwright.c:599
+#: src/drwright.c:593
 msgid "Quit"
-msgstr ""
+msgstr "Sair"
 
-#: src/drwright.c:645
+#: src/drwright.c:642
 msgid "About DrWright"
 msgstr "Sobre DrWright"
 
-#: src/drwright.c:669
+#: src/drwright.c:667
 msgid "A computer break reminder."
-msgstr "Um lembrete de intrevalos."
+msgstr "Um lembrete de intervalos."
 
-#: src/drwright.c:670
-#, fuzzy
+#: src/drwright.c:668
 msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
-msgstr "Escrito por Richard Hult &lt;rhult@imendo.com&gt;"
+msgstr "Escrito por Richard Hult &lt;richard@imendio.com&gt;"
 
-#: src/drwright.c:671
+#: src/drwright.c:669
 msgid "Eye candy added by Anders Carlsson"
 msgstr "Imagens adicionadas por Anders Carlsson"
 
-#: src/drwright.c:830
+#: src/drwright.c:828
 msgid "Break reminder"
-msgstr "Lembrete intrevalos"
+msgstr "Lembrete intervalos"
 
-#: src/drw-break-window.c:258
+#: src/drw-break-window.c:259
 msgid "Postpone break"
-msgstr ""
+msgstr "Adiar intervalo"
 
-#: src/drw-break-window.c:296
+#: src/drw-break-window.c:297
 msgid "Take a break!"
-msgstr "Faça um intrevalo!"
+msgstr "Faça um intervalo!"
 
 #~ msgid "<b>Warning _method:</b>"
 #~ msgstr "<b>_Método aviso:</b>"
@@ -200,10 +183,10 @@ msgstr "Faça um intrevalo!"
 #~ msgstr "Mostrar janela de aviso "
 
 #~ msgid "Break coming up!"
-#~ msgstr "Está a chegar um intrevalo!"
+#~ msgstr "Está a chegar um intervalo!"
 
 #~ msgid "Break!"
-#~ msgstr "Intrevalo!"
+#~ msgstr "Intervalo!"
 
 #~ msgid "Unlock"
 #~ msgstr "Destrancar"
