Updated Polish translation.
2003-07-28  Artur Flinta  <aflinta@cvs.gnome.org>

	* pl.po: Updated Polish translation.

--- a/po/pl.po
+++ b/po/pl.po
@@ -9,14 +9,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: DrWright\n"
-"POT-Creation-Date: 2003-07-08 08:47+0200\n"
-"PO-Revision-Date: 1003-07-05 01:48+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-07-28 00:30+0200\n"
+"PO-Revision-Date: 2003-07-28 00:25+0100\n"
 "Last-Translator: GNOME PL Team <translators@gnome.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/glade/drw-preferences.glade.h:1
 msgid "    "
@@ -56,7 +56,7 @@ msgstr "Czas pracy przed wymuszeniem przerwy"
 
 #: data/glade/drw-preferences.glade.h:10
 msgid "Optional phrase to use for postponing a break"
-msgstr "Opcjonalny napi używany do przekładania przerwy"
+msgstr "Opcjonalny napis używany do przekładania przerwy"
 
 #: data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
