--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-24  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Add Norwegian translation here.
+
 2003-07-28  Artur Flinta  <aflinta@cvs.gnome.org>
 
 	* pl.po: Updated Polish translation.
