--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-24  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in: Added "no" to ALL_LINGUAS.
+
 2003-07-20  Danilo Šegan  <dsegan@gmx.net>
 
 	* configure.in: Added "sr@Latn" to ALL_LINGUAS.
