--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-26  Dafydd Harries  <daf@parnassus.ath.cx>
+
+	* cy.po: Updated Welsh translation.
+
 2003-08-24  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Add Norwegian translation here.
