Added 'ms' (Malay) to ALL_LINGUAS. Added Malay translation.
2003-08-28  Hasbullah Bin Pit <sebol@ikhlas.com>

        * configure.in: Added 'ms' (Malay) to ALL_LINGUAS.
	* po/ms.po: Added Malay translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-28  Hasbullah Bin Pit <sebol@ikhlas.com>
+                                                                                
+        * ms.po: Added Malay translation.
+
 2003-08-26  Dafydd Harries  <daf@parnassus.ath.cx>
 
 	* cy.po: Updated Welsh translation.
