--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-01  Metin Amiroff  <metin@karegen.com>
+
+	* az.po: Added Azerbaijani translation.
+
 2003-08-28  Hasbullah Bin Pit <sebol@ikhlas.com>
                                                                                 
         * ms.po: Added Malay translation.
