--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-01  Metin Amiroff  <metin@karegen.com>
+
+	configure.in: Added "az" in ALL_LINGUAS.
+
 2003-08-28  Hasbullah Bin Pit <sebol@ikhlas.com>
                                                                                 
         * configure.in: Added 'ms' (Malay) to ALL_LINGUAS.
