--- a/po/es.po
+++ b/po/es.po
@@ -1,20 +1,21 @@
+# translation of drwright.HEAD.po to Spanish
 # translation of drwright.HEAD.es.po to Spanish
 # This file is distributed under the same license as the rest of DrWright.
 # By Nicols Lichtmaier <nick@technisys.com.ar>
-# Francisco Javier F. Serrador <serrador@arrakis.es>, 2003
+# Francisco Javier F. Serrador <serrador@arrakis.es>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: drwright.HEAD.es\n"
+"Project-Id-Version: drwright.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-07-12 20:02+0200\n"
-"PO-Revision-Date: 2003-07-20 05:46+0200\n"
+"PO-Revision-Date: 2003-08-30 20:30+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@arrakis.es>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.1\n"
+"X-Generator: KBabel 1.0.2\n"
 
 #: data/glade/drw-preferences.glade.h:1
 msgid "    "
@@ -58,7 +59,7 @@ msgstr "Frase opcional a usar al posponer un descanso"
 
 #: data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
-msgstr "_Permitir postponer descansos"
+msgstr "_Permitir posponer descansos"
 
 #: data/glade/drw-preferences.glade.h:12
 msgid "_Break interval lasts"
@@ -166,7 +167,7 @@ msgstr "Recordador de descansos"
 
 #: src/drw-break-window.c:259
 msgid "Postpone break"
-msgstr "Postponer descanso"
+msgstr "Posponer descanso"
 
 #: src/drw-break-window.c:297
 msgid "Take a break!"
