--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-15  Fatih Demir <kabalak@gtranslator.org>
+
+	* tr.po: Committed updated Turkish translation by Ridvan.
+
 2003-09-01  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
         * es.po: Revision of Spanish translation by
