--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-05  Marcel Telka  <marcel@telka.sk>
+
+	* sk.po: Added Slovak translation by
+	Pavel Kanzelsberger <kanzels@boxnetwork.sk>.
+
 2003-09-15  Fatih Demir <kabalak@gtranslator.org>
 
 	* tr.po: Committed updated Turkish translation by Ridvan.
