Updated Azerbaijani translation.
2003-10-25  Metin Amiroff  <metin@karegen.com>

	* az.po: Updated Azerbaijani translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-25  Metin Amiroff  <metin@karegen.com>
+
+	* az.po: Updated Azerbaijani translation.
+
 2003-10-05  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Added Slovak translation by
