croatian translations updated

--- a/po/hr.po
+++ b/po/hr.po
@@ -1,11 +1,11 @@
 # Translation of drwright to Croatian
 # Copyright (C) Croatian team
-# Translators: Automatski Prijevod <>,
+# Translators: Automatski Prijevod <>,Boris Tudan <boris.tudan@ka.htnet.hr>,
 msgid ""
 msgstr ""
 "Project-Id-Version: drwright 0\n"
 "POT-Creation-Date: 2003-11-06 18:06+0100\n"
-"PO-Revision-Date: 2003-11-07 18:39+CET\n"
+"PO-Revision-Date: 2003-11-10 16:48+CET\n"
 "Last-Translator: auto\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "MIME-Version: 1.0\n"
@@ -111,7 +111,7 @@ msgstr "Onemogućeno"
 #: src/drwright.c:461
 #, c-format
 msgid "%d minutes until the next break"
-msgstr ""
+msgstr "%d  minuta do sljedeće pauze"
 
 #: src/drwright.c:464
 msgid "One minute until the next break"
