--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-16  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Added  Greek translation.
+
 2003-10-25  Metin Amiroff  <metin@karegen.com>
 
 	* az.po: Updated Azerbaijani translation.
