Added Mongolian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-03  Sanlig Badral  <badral@openmn.org>
+
+	* mn.po: Added Mongolian translation by Sukhbaatar Dulmandakh.
+
 2003-11-16  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Added  Greek translation.
