--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-13  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Added Albanian translation.
+
 2003-12-03  Sanlig Badral  <badral@openmn.org>
 
 	* mn.po: Added Mongolian translation by Sukhbaatar Dulmandakh.
