--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-28  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Fixed Czech translation.
+
 2004-01-13  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Added Albanian translation.
