--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-01  Robert Sedak  <robert.sedak@sk.htnet.hr>
+
+	* hr.po: Updated Croatian translation.
+
 2004-01-28  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Fixed Czech translation.
