--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-01  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Added British English translation
+
 2004-03-20  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
         * hr.po: Updated Croatian translation.
