--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-06  Yuriy Syrota  <rasta@cvs.gnome.org>
+
+	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS
+
 2004-04-01  Gareth Owen  <gowen72@yahoo.com>
 
 	* configure.in: Added en_GB to ALL_LINGUAS
