--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-06  Yuriy Syrota  <rasta@cvs.gnome.org>
+
+	* uk.po: Added Ukrainian translation
+
 2004-04-01  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Added British English translation
