--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-09  Samúel Jón Gunnarsson  <sammi@techattack.nu>
+
+	* is.po: Added Icelandic translation
+
 2004-04-06  Yuriy Syrota  <rasta@cvs.gnome.org>
 
 	* uk.po: Added Ukrainian translation
