--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-09  Samúel Jón Gunnarsson  <sammi@techattack.nu>
+
+	* configure.in: Added "is" to All_LINGUAS
+
 2004-04-06  Yuriy Syrota  <rasta@cvs.gnome.org>
 
 	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS
