--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-09  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Luc Roobrouck.
+
 2004-04-09  Samúel Jón Gunnarsson  <sammi@techattack.nu>
 
 	* is.po: Added Icelandic translation
