--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-10  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
+    
+        * pt_BR.po: Updated Brazilian Portuguese translation from
+        Viviani Ap. dos Santos <vivi_olivetti@brfree.com.br>.
+
 2004-04-09  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Luc Roobrouck.
