--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-30  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Added Canadian English translation.
+
 2004-04-10  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
     
         * pt_BR.po: Updated Brazilian Portuguese translation from
