--- a/po/bg.po
+++ b/po/bg.po
@@ -1,91 +1,80 @@
 # DrWright
 # Copyright (C) 2002, 2003 Richard Hult.
 # This file is distributed under the same license as the DrWright package.
-# 
 # Филип Андонов <demercel@netbg.com>, 2003.
-#
+# Владимир Петков <vpetkov@i-space.org>, updates 2004
+# 
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: DrWright 0.14\n"
-"POT-Creation-Date: 2003-06-24 00:30+0200\n"
-"PO-Revision-Date: 2003-01-20 16:36:37+0100\n"
-"Last-Translator: Филип Андонов <demercel@netbg.com>\n"
-"Language-Team: bg <bg@li.org>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-04-26 14:13+0200\n"
+"PO-Revision-Date: 2004-04-26 21:32+0300\n"
+"Last-Translator: Vladimir \"Kaladan\" Petkov <vpetkov@i-space.org>\n"
+"Language-Team: Bulgarian <dict@linux.zonebg.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/glade/drw-preferences.glade.h:1
 msgid "    "
-msgstr ""
+msgstr "····"
 
 #: data/glade/drw-preferences.glade.h:2
 msgid "*"
 msgstr "*"
 
 #: data/glade/drw-preferences.glade.h:3
-#, fuzzy
 msgid "<b>Break</b>"
-msgstr "<b>_Продължителност на почивката:</b>"
+msgstr "<b>Почивка</b>"
 
 #: data/glade/drw-preferences.glade.h:4
-#, fuzzy
 msgid "<b>Work</b>"
-msgstr "<b>_Работен интервал:</b>"
+msgstr "<b>Работа</b>"
 
 #: data/glade/drw-preferences.glade.h:5
 msgid "Check if breaks are allowed to be postponed"
-msgstr ""
+msgstr "Проверява дали е повзолено да се отлагат почивките"
 
 #: data/glade/drw-preferences.glade.h:6
 msgid "DrWright Preferences"
-msgstr "DrWright предпочитания"
+msgstr "Настройки на DrWright"
 
 #: data/glade/drw-preferences.glade.h:7
-#, fuzzy
 msgid "Duration of the break when typing is disallowed"
-msgstr ""
-"<span size=\"small\">Продължителност на почивката, през която писането не е "
-"разрешено.</span>"
+msgstr "Продължителност на почивката, през която писането не е "
+"разрешено."
 
 #: data/glade/drw-preferences.glade.h:8
-#, fuzzy
 msgid "Duration of warning before starting a break"
-msgstr ""
-"<span size=\"small\">Продължителност на предупреждението преди начало на "
-"почивката.\n"
-"</span>"
+msgstr "Продължителност на предупреждението преди начало на "
+"почивката."
 
 #: data/glade/drw-preferences.glade.h:9
-#, fuzzy
 msgid "Duration of work before forcing a break"
-msgstr ""
-"<span size=\"small\">Продължителност на работата, преди принудителна "
-"почивка.\n"
-"</span>"
+msgstr "Продължителност на работата, преди принудителна "
+"почивка."
 
 #: data/glade/drw-preferences.glade.h:10
 msgid "Optional phrase to use for postponing a break"
-msgstr ""
+msgstr "Възможни фрази, които да се използва за отлагане на почивката"
 
 #: data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
-msgstr ""
+msgstr "_Позволява отлагането на поивките"
 
 #: data/glade/drw-preferences.glade.h:12
-#, fuzzy
 msgid "_Break interval lasts"
-msgstr "<b>_Продължителност на почивката:</b>"
+msgstr "_Продължителност на почивката:"
 
 #: data/glade/drw-preferences.glade.h:13
-#, fuzzy
 msgid "_Warning time is"
-msgstr "<b>Предупредително_време:</b>"
+msgstr "_Предупредително време:"
 
 #: data/glade/drw-preferences.glade.h:14
-#, fuzzy
 msgid "_Work interval lasts"
-msgstr "<b>_Работен интервал:</b>"
+msgstr "_Работения интервал продължава"
 
 #: data/glade/drw-preferences.glade.h:15
 msgid "minutes"
@@ -93,7 +82,7 @@ msgstr "минути"
 
 #: src/main.c:128
 msgid "DrWright is already running."
-msgstr "DrWright вече е стартиран"
+msgstr "DrWright вече е стартиран."
 
 #: src/main.c:141
 msgid ""
@@ -101,89 +90,90 @@ msgid ""
 "to have a notification area on your panel. You can add it by right-clicking "
 "on your panel and choose 'Add to panel -> Utilities -> Notification area'."
 msgstr ""
-
-#: src/drwright.c:134
-msgid "/_Enabled"
-msgstr "/Активиран"
-
-#: src/drwright.c:135
-#, fuzzy
-msgid "/_Take a Break"
-msgstr "Направи почивка!"
-
-#: src/drwright.c:137
-msgid "/_Preferences"
-msgstr "/_Предпочитания"
+"DrWright използва зоната за уведомяване за да изобразява информация."
+"Изглежда нямата стартирана зона за уведомяване на вашия панел."
+"Можете да добавите такава чрез натискане на десния бутон върху"
+"вашия панел и от там да изберете Добавя към панела > Полезни >"
+"Област за уведомяване."
 
 #: src/drwright.c:138
+msgid "/_Enabled"
+msgstr "/_Активиран"
+
+#: src/drwright.c:139
+msgid "/_Take a Break"
+msgstr "/_Направи почивка!"
+
+#: src/drwright.c:141
+msgid "/_Preferences"
+msgstr "/_Настройки"
+
+#: src/drwright.c:142
 msgid "/_About"
 msgstr "/_Относно"
 
-#: src/drwright.c:140
+#: src/drwright.c:144
 msgid "/_Remove Icon"
 msgstr "_Премахни Икона"
 
-#: src/drwright.c:443
+#: src/drwright.c:475
 msgid "Disabled"
 msgstr "Деактивиран"
 
-#: src/drwright.c:461
+#: src/drwright.c:493
 #, c-format
 msgid "%d minutes until the next break"
-msgstr "%d минути до следващата  почивка"
+msgstr "%d минути до следващата почивка"
 
-#: src/drwright.c:464
+#: src/drwright.c:496
 msgid "One minute until the next break"
 msgstr "Една минута до следващата почивка"
 
-#: src/drwright.c:466
-#, fuzzy
+#: src/drwright.c:498
 msgid "Less than one minute until the next break"
-msgstr "Една минута до следващата почивка"
+msgstr "По-малко от една минута до следващата почивка"
 
-#: src/drwright.c:583
+#: src/drwright.c:609
 msgid "Quit DrWright?"
 msgstr "Изход от DrWright?"
 
-#: src/drwright.c:584
+#: src/drwright.c:610
 msgid "Don't forget to take regular breaks."
-msgstr "Не забравяйте да правите редовни почивки"
+msgstr "Не забравяйте да правите редовни почивки."
 
-#: src/drwright.c:595
+#: src/drwright.c:621
 msgid "Don't Quit"
-msgstr ""
+msgstr "Не излиза"
 
-#: src/drwright.c:599
-#, fuzzy
+#: src/drwright.c:625
 msgid "Quit"
-msgstr "/_Изход"
+msgstr "Изход"
 
-#: src/drwright.c:645
+#: src/drwright.c:674
 msgid "About DrWright"
 msgstr "Относно DrWright"
 
-#: src/drwright.c:669
+#: src/drwright.c:699
 msgid "A computer break reminder."
 msgstr "Напомняне за почивки на компютъра"
 
-#: src/drwright.c:670
-#, fuzzy
+#: src/drwright.c:700
 msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
-msgstr "Написано от Richard Hult &lt;rhult@codefactory.se&gt;"
+msgstr "Създадено от·Richard·Hult·&lt;richard@imendio.com&gt;"
 
-#: src/drwright.c:671
+#: src/drwright.c:701
 msgid "Eye candy added by Anders Carlsson"
 msgstr "Визуални глезотии от Anders Carlsson"
 
-#: src/drwright.c:830
+#: src/drwright.c:868
 msgid "Break reminder"
 msgstr "Напомнящ почивки"
 
-#: src/drw-break-window.c:258
-msgid "Postpone break"
-msgstr ""
+#: src/drw-break-window.c:208
+msgid "_Postpone break"
+msgstr "_Отлага почивка"
 
-#: src/drw-break-window.c:296
+#: src/drw-break-window.c:251
 msgid "Take a break!"
 msgstr "Направи почивка!"
 
