--- a/po/ru.po
+++ b/po/ru.po
@@ -1,17 +1,22 @@
-# Copyright (C) 2003
+# #-#-#-#-#  ru.po (drwright)  #-#-#-#-#
+# Copyright (C) 2003-2004
 # This file is distributed under the same license as the drwright package.
 # Valek Filippov <frob@df.ru>, 2003.
+# Vitaly Lipatov <lav@altlinux.ru>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: drwright\n"
-"POT-Creation-Date: 2003-06-26 22:54+0400\n"
-"PO-Revision-Date: 2003-06-26 23:38+0400\n"
-"Last-Translator: Valek Filippov <frob@df.ru>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-07-06 07:30+0400\n"
+"PO-Revision-Date: 2004-07-06 08:31+0400\n"
+"Last-Translator: Dmitry G. Mastrukov <dmitry@taurussoft.org>\n"
 "Language-Team: Russian <gnome-cyr@gnome.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: data/glade/drw-preferences.glade.h:1
 msgid "    "
@@ -31,7 +36,7 @@ msgstr "<b>Работа</b>"
 
 #: data/glade/drw-preferences.glade.h:5
 msgid "Check if breaks are allowed to be postponed"
-msgstr "Могут ли перерывы быть отложены"
+msgstr "Отметьте, если разрешено откладывать перерыв"
 
 #: data/glade/drw-preferences.glade.h:6
 msgid "DrWright Preferences"
@@ -39,39 +44,41 @@ msgstr "Настройки DrWright"
 
 #: data/glade/drw-preferences.glade.h:7
 msgid "Duration of the break when typing is disallowed"
-msgstr "Длительность перерыва во время которого запрещен набор текста"
+msgstr ""
+"Продолжительность перерыва, в течение которого запрещёно пользование "
+"клавиатурой"
 
 #: data/glade/drw-preferences.glade.h:8
 msgid "Duration of warning before starting a break"
-msgstr "Длительность предупреждения до начала перерыва"
+msgstr "Продолжительность предупреждения перед началом перерыва"
 
 #: data/glade/drw-preferences.glade.h:9
 msgid "Duration of work before forcing a break"
-msgstr "Длительность работы до принудительной перерыва"
+msgstr "Допустимое время работы без перерыва"
 
 #: data/glade/drw-preferences.glade.h:10
 msgid "Optional phrase to use for postponing a break"
-msgstr "Необязательная фраза используемая для откладывания перерыва"
+msgstr "Дополнительная фраза, используемая для откладывания перерыва"
 
 #: data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
-msgstr "Разрешить откладывание перерывов"
+msgstr "_Разрешить откладывать перерыв"
 
 #: data/glade/drw-preferences.glade.h:12
 msgid "_Break interval lasts"
-msgstr "Последние интервалы между перерывами"
+msgstr "_Продолжительность перерыва"
 
 #: data/glade/drw-preferences.glade.h:13
 msgid "_Warning time is"
-msgstr "Время предупреждения"
+msgstr "_Время предупреждения"
 
 #: data/glade/drw-preferences.glade.h:14
 msgid "_Work interval lasts"
-msgstr "Последние интервалы между работой"
+msgstr "_Продолжительность работы"
 
 #: data/glade/drw-preferences.glade.h:15
 msgid "minutes"
-msgstr "минут"
+msgstr "минуты"
 
 #: src/main.c:128
 msgid "DrWright is already running."
@@ -83,84 +90,88 @@ msgid ""
 "to have a notification area on your panel. You can add it by right-clicking "
 "on your panel and choose 'Add to panel -> Utilities -> Notification area'."
 msgstr ""
-
-#: src/drwright.c:134
-msgid "/_Enabled"
-msgstr "/Включен"
-
-#: src/drwright.c:135
-msgid "/_Take a Break"
-msgstr "/Сделать перерыв"
-
-#: src/drwright.c:137
-msgid "/_Preferences"
-msgstr "/Настройки"
+"DrWright использует область уведомлений для вывода информации. Если вы не "
+"видите область уведомлений на панели, вы можете добавить её, нажав правую "
+"кнопку мыши на панель и выбрав\"Добавить на панель -> Утилиты -> Область "
+"уведомлений\"."
 
 #: src/drwright.c:138
+msgid "/_Enabled"
+msgstr "/_Включено"
+
+#: src/drwright.c:139
+msgid "/_Take a Break"
+msgstr "/_Сделать перерыв"
+
+#: src/drwright.c:141
+msgid "/_Preferences"
+msgstr "/_Изменить настройки"
+
+#: src/drwright.c:142
 msgid "/_About"
-msgstr "/О программе"
+msgstr "/_О программе"
 
-#: src/drwright.c:140
+#: src/drwright.c:144
 msgid "/_Remove Icon"
-msgstr "/Удалить пиктограмму"
+msgstr "/_Убрать значок"
 
-#: src/drwright.c:443
+#: src/drwright.c:475
 msgid "Disabled"
-msgstr "Отключен"
+msgstr "Выключено"
 
-#: src/drwright.c:461
+#: src/drwright.c:493
 #, c-format
 msgid "%d minutes until the next break"
 msgstr "%d минут до следующего перерыва"
 
-#: src/drwright.c:464
+#: src/drwright.c:496
 msgid "One minute until the next break"
-msgstr "Одна минута до следующего перерыва"
+msgstr "Осталась одна минута до следующего перерыва"
 
-#: src/drwright.c:466
+#: src/drwright.c:498
 msgid "Less than one minute until the next break"
-msgstr "Меньше чем одна минута до следующего перерыва"
+msgstr "Осталось меньше минуты до перерыва"
 
-#: src/drwright.c:583
+#: src/drwright.c:609
 msgid "Quit DrWright?"
-msgstr "Выйти из DrWright?"
+msgstr "Выйти из программы DrWright?"
 
-#: src/drwright.c:584
+#: src/drwright.c:610
 msgid "Don't forget to take regular breaks."
 msgstr "Не забывайте делать регулярные перерывы."
 
-#: src/drwright.c:595
+#: src/drwright.c:621
 msgid "Don't Quit"
 msgstr "Не выходить"
 
-#: src/drwright.c:599
+#: src/drwright.c:625
 msgid "Quit"
 msgstr "Выйти"
 
-#: src/drwright.c:648
+#: src/drwright.c:674
 msgid "About DrWright"
 msgstr "О программе DrWright"
 
-#: src/drwright.c:672
+#: src/drwright.c:699
 msgid "A computer break reminder."
-msgstr "Напоминатель о перерывах в работе."
+msgstr "Программа-напоминание о перерывах в работе."
 
-#: src/drwright.c:673
+#: src/drwright.c:700
 msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
-msgstr "Написа Richard Hult &lt;richard@imendio.com&gt;"
+msgstr "Написана Ричардом Халтом (Richard Hult) &lt;richard@imendio.com&gt;"
 
-#: src/drwright.c:674
+#: src/drwright.c:701
 msgid "Eye candy added by Anders Carlsson"
-msgstr "Улучшения сделал Anders Carlsson"
+msgstr "Улучшения сделал Андерс Карлссон (Anders Carlsson)"
 
-#: src/drwright.c:833
+#: src/drwright.c:868
 msgid "Break reminder"
-msgstr "Напоминатель о перерывах"
+msgstr "Напоминание о перерыве"
 
-#: src/drw-break-window.c:258
-msgid "Postpone break"
-msgstr "Отложить перерыв"
+#: src/drw-break-window.c:208
+msgid "_Postpone break"
+msgstr "_Отложить перерыв"
 
-#: src/drw-break-window.c:296
+#: src/drw-break-window.c:251
 msgid "Take a break!"
-msgstr "Сделать перерыв!"
+msgstr "Сделайте перерыв!"
