ankit@redhat.com 11/08/2004 * gu.po : Translation Added

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-11  Ankit Patel <ankit@redhat.com>
+
+	* gu.po: Added Gujarati translation.
+
 2004-07-06  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
