--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-11  Ankit Patel <ankit@redhat.com>
+
+	* configure.in: Added "gu" to ALL_LINGUAS.
+
 2004-04-30  Adam Weinberger  <adamw@gnome.org>
 
 	* configure.in: Added en_CA to ALL_LINGUAS.
