Updated and revised Portuguese translation.
2004-08-16  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Updated and revised Portuguese translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-16  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated and revised Portuguese translation.
+
 2004-08-11  Ankit Patel <ankit@redhat.com>
 
 	* gu.po: Added Gujarati translation.
