--- a/po/da.po
+++ b/po/da.po
@@ -1,87 +1,75 @@
-# DrWright
-# Copyright (C) 2002 Richard Hult.
-# Richard Hult <richard@imendo.com>, 2002.
-#
+# Danish translation of DrWright
+# Copyright (C) 2002 Richard Hult <richard@imendo.com>.
+# This file is distributed under the same license as the drwright package.
+# Kim Schulz <kim@gnome.dk>, 2003.
+# Martin Willemoes Hansen <mwh@sysrq.dk>, 2004.
 msgid ""
 msgstr ""
-"Project-Id-Version: DrWright 0.12\n"
-"POT-Creation-Date: 2003-06-24 00:30+0200\n"
-"PO-Revision-Date: 2003-01-14 02:12+01\n"
-"Last-Translator: Kim Schulz <kim@gnome.dk>\n"
-"Language-Team: Dansk <dansk@klid.dk>\n"
+"Project-Id-Version: DrWright\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-08-28 13:01+0200\n"
+"PO-Revision-Date: 2004-08-28 13:00+0200\n"
+"Last-Translator: Martin Willemoes Hansen <mwh@sysrq.dk>\n"
+"Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: data/glade/drw-preferences.glade.h:1
 msgid "    "
-msgstr ""
+msgstr "    "
 
 #: data/glade/drw-preferences.glade.h:2
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/glade/drw-preferences.glade.h:3
-#, fuzzy
 msgid "<b>Break</b>"
-msgstr "<b>_Pause interval:</b>"
+msgstr "<b>Pause</b>"
 
 #: data/glade/drw-preferences.glade.h:4
-#, fuzzy
 msgid "<b>Work</b>"
-msgstr "<b>A_rbejds interval</b>"
+msgstr "<b>Arbejde</b>"
 
 #: data/glade/drw-preferences.glade.h:5
 msgid "Check if breaks are allowed to be postponed"
-msgstr ""
+msgstr "Kontroller om pauser kan udsættes"
 
 #: data/glade/drw-preferences.glade.h:6
 msgid "DrWright Preferences"
-msgstr "DrWright indstillinger"
+msgstr "Indstillinger for DrWright"
 
 #: data/glade/drw-preferences.glade.h:7
-#, fuzzy
 msgid "Duration of the break when typing is disallowed"
-msgstr ""
-"<span size=\"small\">Varighed af pausen hvor skrivning er forbudt.\n"
-"</span>"
+msgstr "Varighed af pausen hvor skrivning er forbudt"
 
 #: data/glade/drw-preferences.glade.h:8
-#, fuzzy
 msgid "Duration of warning before starting a break"
-msgstr ""
-"<span size=\"small\">Varighed af advarsel før pausen starter.\n"
-"</span>"
+msgstr "Varighed af advarsel før pausen starter"
 
 #: data/glade/drw-preferences.glade.h:9
-#, fuzzy
 msgid "Duration of work before forcing a break"
-msgstr ""
-"<span size=\"small\">Varighed af arbejde inden pausen skal indfinde.\n"
-"</span>"
+msgstr "Varighed af arbejde inden pausen skal indfinde"
 
 #: data/glade/drw-preferences.glade.h:10
 msgid "Optional phrase to use for postponing a break"
-msgstr ""
+msgstr "Valgfri løsen til brug for udskydelse af en pause"
 
 #: data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
-msgstr ""
+msgstr "_Tillad udsættelse af pauser"
 
 #: data/glade/drw-preferences.glade.h:12
-#, fuzzy
 msgid "_Break interval lasts"
-msgstr "<b>_Pause interval:</b>"
+msgstr "Varighed af _pause-interval"
 
 #: data/glade/drw-preferences.glade.h:13
-#, fuzzy
 msgid "_Warning time is"
-msgstr "<b>_Advarsles tid:</b>"
+msgstr "_Advarsles tid er"
 
 #: data/glade/drw-preferences.glade.h:14
-#, fuzzy
 msgid "_Work interval lasts"
-msgstr "<b>A_rbejds interval</b>"
+msgstr "Varighed af a_rbejds-interval"
 
 #: data/glade/drw-preferences.glade.h:15
 msgid "minutes"
@@ -97,90 +85,88 @@ msgid ""
 "to have a notification area on your panel. You can add it by right-clicking "
 "on your panel and choose 'Add to panel -> Utilities -> Notification area'."
 msgstr ""
+"DrWright anvender statusfeltet til at vise information. Det ser ikke ud til "
+"at du har et statusfelt i dit panel. Du kan tilføje et ved at højreklikke på "
+"panelet og vælge \"Tilføj til panel -> Værktøj -> Statusfelt\"."
 
-#: src/drwright.c:134
+#: src/drwright.c:138
 msgid "/_Enabled"
-msgstr "/_Slået Til"
+msgstr "/_Slået til"
 
-#: src/drwright.c:135
-#, fuzzy
+#: src/drwright.c:139
 msgid "/_Take a Break"
-msgstr "Hold en pause!"
+msgstr "/_Hold en pause"
 
-#: src/drwright.c:137
+#: src/drwright.c:141
 msgid "/_Preferences"
 msgstr "/_Indstillinger"
 
-#: src/drwright.c:138
+#: src/drwright.c:142
 msgid "/_About"
 msgstr "/_Om"
 
-#: src/drwright.c:140
+#: src/drwright.c:144
 msgid "/_Remove Icon"
-msgstr ""
+msgstr "/_Fjern ikon"
 
-#: src/drwright.c:443
+#: src/drwright.c:475
 msgid "Disabled"
 msgstr "Slået fra"
 
-#: src/drwright.c:461
+#: src/drwright.c:493
 #, c-format
 msgid "%d minutes until the next break"
 msgstr "%d minutter indtil næste pause"
 
-#: src/drwright.c:464
+#: src/drwright.c:496
 msgid "One minute until the next break"
 msgstr "Et minut indtil næste pause"
 
-#: src/drwright.c:466
-#, fuzzy
+#: src/drwright.c:498
 msgid "Less than one minute until the next break"
-msgstr "Et minut indtil næste pause"
+msgstr "Mindre end et minut indtil næste pause"
 
-#: src/drwright.c:583
+#: src/drwright.c:609
 msgid "Quit DrWright?"
 msgstr "Afslut DrWright?"
 
-#: src/drwright.c:584
-#, fuzzy
+#: src/drwright.c:610
 msgid "Don't forget to take regular breaks."
 msgstr "Glem ikke at holde pause jævnligt."
 
-#: src/drwright.c:595
+#: src/drwright.c:621
 msgid "Don't Quit"
-msgstr ""
+msgstr "Afslut ikke"
 
-#: src/drwright.c:599
-#, fuzzy
+#: src/drwright.c:625
 msgid "Quit"
-msgstr "/_Afslut"
+msgstr "Afslut"
 
-#: src/drwright.c:645
+#: src/drwright.c:674
 msgid "About DrWright"
 msgstr "Om DrWright"
 
-#: src/drwright.c:669
+#: src/drwright.c:699
 msgid "A computer break reminder."
 msgstr "En computer pause påminder"
 
-#: src/drwright.c:670
-#, fuzzy
+#: src/drwright.c:700
 msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
-msgstr "Skrevet af Richard Hult $lt;richard@imendo.com&gt;"
+msgstr "Skrevet af Richard Hult <richard@imendio.com>"
 
-#: src/drwright.c:671
+#: src/drwright.c:701
 msgid "Eye candy added by Anders Carlsson"
-msgstr "Billede-lækkerier tilføjet af Anders Carlsson "
+msgstr "Billede-lækkerier tilføjet af Anders Carlsson"
 
-#: src/drwright.c:830
+#: src/drwright.c:868
 msgid "Break reminder"
 msgstr "Pause påminder"
 
-#: src/drw-break-window.c:258
-msgid "Postpone break"
-msgstr ""
+#: src/drw-break-window.c:208
+msgid "_Postpone break"
+msgstr "_Udsæt pause"
 
-#: src/drw-break-window.c:296
+#: src/drw-break-window.c:251
 msgid "Take a break!"
 msgstr "Hold en pause!"
 
