--- a/po/da.po
+++ b/po/da.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: DrWright\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-28 13:01+0200\n"
-"PO-Revision-Date: 2004-08-28 13:00+0200\n"
+"POT-Creation-Date: 2004-08-30 12:30+0200\n"
+"PO-Revision-Date: 2004-08-30 12:27+0200\n"
 "Last-Translator: Martin Willemoes Hansen <mwh@sysrq.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -65,7 +65,7 @@ msgstr "Varighed af _pause-interval"
 
 #: data/glade/drw-preferences.glade.h:13
 msgid "_Warning time is"
-msgstr "_Advarsles tid er"
+msgstr "_Advarselstid er"
 
 #: data/glade/drw-preferences.glade.h:14
 msgid "_Work interval lasts"
@@ -116,15 +116,15 @@ msgstr "Slået fra"
 #: src/drwright.c:493
 #, c-format
 msgid "%d minutes until the next break"
-msgstr "%d minutter indtil næste pause"
+msgstr "%d minutter til næste pause"
 
 #: src/drwright.c:496
 msgid "One minute until the next break"
-msgstr "Et minut indtil næste pause"
+msgstr "Et minut til næste pause"
 
 #: src/drwright.c:498
 msgid "Less than one minute until the next break"
-msgstr "Mindre end et minut indtil næste pause"
+msgstr "Mindre end et minut til næste pause"
 
 #: src/drwright.c:609
 msgid "Quit DrWright?"
@@ -148,15 +148,15 @@ msgstr "Om DrWright"
 
 #: src/drwright.c:699
 msgid "A computer break reminder."
-msgstr "En computer pause påminder"
+msgstr "En automatisk pausepåminder"
 
 #: src/drwright.c:700
 msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
-msgstr "Skrevet af Richard Hult <richard@imendio.com>"
+msgstr "Skrevet af Richard Hult &lt;richard@imendio.com&gt;"
 
 #: src/drwright.c:701
 msgid "Eye candy added by Anders Carlsson"
-msgstr "Billede-lækkerier tilføjet af Anders Carlsson"
+msgstr "Billedlækkerier tilføjet af Anders Carlsson"
 
 #: src/drwright.c:868
 msgid "Break reminder"
