--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-28  Richard Hult  <richard@imendio.com>
+
+	* Release 0.18.
+
 2004-08-30  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* da.po: Updated Danish translation.
