2004-10-04 Updated ja.po. T.Aihana <aihana@gnome.gr.jp>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-04  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2004-09-28  Richard Hult  <richard@imendio.com>
 
 	* Release 0.18.
