--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-09  Frank Arnold  <farnold@cvs.gnome.org>
+
+	* de.po: Updated German translation.
+
 2004-12-06  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* wa.po: Added Walloon file
