--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -1,8 +1,7 @@
 # English/Canada translation of drwright.
-# Copyright (C) 2004 THE drwright'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the drwright package.
+# Copyright (C) 2004 Adam Weinberger and the GNOME Foundation
+# This file is distributed under the same licence as the drwright package.
 # Adam Weinberger <adamw@gnome.org>, 2004.
-# , fuzzy
 # 
 # 
 msgid ""
@@ -12,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2004-04-30 22:00-0400\n"
 "PO-Revision-Date: 2004-04-30 22:01-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
-"Language-Team: English/Canada <adamw@FreeBSD.org>\n"
+"Language-Team: Canadian English <adamw@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit"
