Rename no to nb Add Remove
2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Rename no to nb
	* po/nb.po: Add
	* po/no.po: Remove

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in: Rename no to nb
+	* po/nb.po: Add
+	* po/no.po: Remove
+
 2006-01-24  Clytie Siddall <clytie@riverland.net.au>
 
 	* configure.in	Added vi in ALL_LINGUAS line.
